tests/NormalTests/paczka1/small_fuzzy/37131705.err
Error in line 9: ?ceYi!VYb
Error in line 5: ceYioVYb A904 68,3
